--- a/Pos-Producao/stylePos.css
+++ b/Pos-Producao/stylePos.css
@@ -124,8 +124,11 @@ header button#openModalBtnRender {
 }
 
 .tabela-container {
-    width: 98%;
     margin: auto;
+    max-height: calc(100vh - 108px);
+    overflow-y: auto;
+    padding: 10px;
+    width: 95vw;
 }
 
 .tabulator-cell {
@@ -144,16 +147,16 @@ table {
     overflow: auto !important;
 }
 
-.tabulator::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 5px;
 }
 
-.tabulator::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #747474;
     border-radius: 10px;
 }
 
-.tabulator::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: #f1f1f1;
 }
 
