--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -767,7 +767,7 @@ a {
     padding: 20px;
     width: 80%;
     height: auto;
-    max-height: 80%;
+    /* max-height: 80%; */
     overflow-y: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     animation: slideDown 0.3s ease-out;
@@ -2752,7 +2752,7 @@ ul.file-list {
     background: #f8f8f8;
 }
 
-#batch_actions:hover {
+#batch_actions:hover, #configAcomp:hover {
     animation-name: rotateIn;
     animation-duration: 1s;
     animation-fill-mode: both;
